@@ -140,3 +140,6 @@ Aggiunto LazySet per setters
 
 [24/02/2022] - 5.0.44 - Simone Pelaia
 Aggiunti metodi base di Save e Delete sul BusinessObject con possibilità di overridare dei metodi protetti da eseguire prima o dopo entrambe le operazioni
+
+[07/03/2022] - 5.0.45 - Simone Pelaia
+Aggiunta possibilità di resettare dall'esterno tutte le proprietà Lazy di un businessobject
